--- a/app/src/main/res/drawable/bacckground_color.xml
+++ b/app/src/main/res/drawable/bacckground_color.xml
@@ -5,8 +5,8 @@
 
     <gradient
         android:angle="90"
-        android:startColor="#262626"
-        android:endColor="#3c3c3c"
+        android:startColor="#1a1a73"
+        android:endColor="#2652a8"
         android:type="linear">
     </gradient>
 </shape>
