--- a/app/src/main/res/drawable/button_login_style.xml
+++ b/app/src/main/res/drawable/button_login_style.xml
@@ -3,7 +3,9 @@
     >
 
 
-    <stroke android:width="1dp" android:color="#ffffff"/>
-    <corners android:radius="15dp"/>
-
+   <!-- <stroke android:width="1dp"
+        android:color="#ffffff"/>
+    <corners android:radius="15dp"/>-->
+   <gradient android:startColor="#008fd1" android:centerColor="#5252e0" android:endColor="#6b47d1"></gradient>
+    <corners android:radius="60dp"/>
 </shape>
