--- a/app/src/main/res/layout/activity_login_user.xml
+++ b/app/src/main/res/layout/activity_login_user.xml
@@ -9,14 +9,14 @@
     tools:context=".Login_user">
 
 
-
-    <TextView
+    <ImageView
         android:id="@+id/H1"
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_height="150dp"
         android:layout_marginTop="40dp"
         android:layout_marginBottom="32dp"
         android:gravity="center"
+        android:src="@drawable/ic_android_black_24dp"
         android:text="Logo"
         android:textColor="#FFFFFF"
         android:textSize="50sp"
@@ -31,15 +31,19 @@
         android:id="@+id/email"
         android:layout_width="300dp"
         android:layout_height="40sp"
-        android:hint="Email"
-        android:textColorHint="#F6F6F6"
-        android:paddingLeft="15dp"
-        android:textColor="#ffffff"
-        android:background="@drawable/edit_text"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="20dp"
+        android:hint="อีเมล"
         android:inputType="textEmailAddress"
+        android:paddingLeft="10dp"
+        android:textColor="#ffffff"
+        android:paddingBottom="10sp"
+        android:textColorHint="#a6a6a6"
+        android:drawableStart="@drawable/ic_email_black_24dp"
+        android:drawablePadding="9dp"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toBottomOf="@+id/H1"></EditText>
 
@@ -47,13 +51,16 @@
         android:id="@+id/password"
         android:layout_width="300dp"
         android:layout_height="40sp"
-        android:paddingLeft="15dp"
-        android:layout_marginBottom="20dp"
-        android:textColorHint="#F6F6F6"
-        android:background="@drawable/edit_text"
-        android:hint="Password"
-        android:textColor="#ffffff"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="68dp"
+        android:paddingBottom="10sp"
+        android:hint="รหัสผ่าน"
         android:inputType="textPassword"
+        android:paddingLeft="10dp"
+        android:drawableStart="@drawable/ic_vpn_key_black_24dp"
+        android:drawablePadding="9dp"
+        android:textColor="#ffffff"
+        android:textColorHint="#a6a6a6"
         app:layout_constraintBottom_toTopOf="@+id/login"
         app:layout_constraintEnd_toEndOf="@+id/login"
         app:layout_constraintStart_toStartOf="@+id/login"
@@ -64,29 +71,31 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/H1"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="120dp"
         android:background="@drawable/button_login_style"
-        android:text="register"
+        android:text="สมัครสมาชิก"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/login"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/login"></Button>
+        app:layout_constraintStart_toStartOf="@+id/login"
+        app:layout_constraintTop_toBottomOf="@+id/login"></Button>
 
     <Button
         android:id="@+id/login"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_below="@id/H1"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/button_login_style"
-        android:theme="@style/FlatButton"
-        android:text="Login"
+        android:text="เข้าสู่ระบบ"
         android:textColor="#FFFFFF"
+        android:theme="@style/FlatButton"
         app:layout_constraintBottom_toTopOf="@+id/register"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent"></Button>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/password"></Button>
 
 
     <!--<TextView
