--- a/app/src/main/res/drawable/app_bar_back.xml
+++ b/app/src/main/res/drawable/app_bar_back.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#1b3994"></solid>
+    <solid android:color="#334478"></solid>
     <corners android:bottomLeftRadius="20dp"
         android:bottomRightRadius="20dp"/>
 
