--- a/app/src/main/res/layout/app_savedatafood_user.xml
+++ b/app/src/main/res/layout/app_savedatafood_user.xml
@@ -2,7 +2,7 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/app_bar1"
+    android:id="@+id/app_bar"
     android:background="@color/colorAccent"
     >
 
@@ -22,20 +22,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="เลือกรายการอาหาร"
+            android:text="บันทึกรายการอาหาร"
             android:textAlignment="center"
             android:textColor="#000000"
             android:textSize="24dp"
             android:textStyle="bold"/>
 
-        <ImageView
-            android:id="@+id/addprivate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:layout_marginRight="10dp"
-            android:src="@drawable/ic_playlist_add_black_24dp" />
 
 
     </RelativeLayout>
