--- a/app/src/main/res/layout/activity_setting_user.xml
+++ b/app/src/main/res/layout/activity_setting_user.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bacckground_color"
     tools:context=".setting_user"
     >
 
@@ -15,6 +16,7 @@
         ></include>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="20sp"
         android:id="@+id/my_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
