--- a/app/src/main/res/layout/app_barselectfood_private.xml
+++ b/app/src/main/res/layout/app_barselectfood_private.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/app_bar1"
-    android:background="@color/colorAccent"
+    android:background="@drawable/app_bar_back"
     >
 
     <RelativeLayout
@@ -24,7 +24,7 @@
             android:layout_marginTop="5dp"
             android:text="รายการอาหารของฉัน"
             android:textAlignment="center"
-            android:textColor="#000000"
+            android:textColor="#FFFFFF"
             android:textSize="24dp"
             android:textStyle="bold"/>
 
