--- a/app/src/main/res/layout/listselect_edit_excercise.xml
+++ b/app/src/main/res/layout/listselect_edit_excercise.xml
@@ -13,7 +13,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:textSize="30dp"
-
+android:textColor="#FFFFFF"
             android:text="name" />
         <LinearLayout
             android:layout_width="150dp"
@@ -23,6 +23,7 @@
             <TextView
                 android:id="@+id/kcal"
                 android:layout_width="match_parent"
+                android:textColor="#FFFFFF"
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:textSize="30dp"
@@ -32,6 +33,7 @@
                 android:id="@+id/numkcal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="#FFFFFF"
                 android:layout_weight="6"
                 android:textSize="30dp"
 
