--- a/app/src/main/res/layout/listselect_edit_food.xml
+++ b/app/src/main/res/layout/listselect_edit_food.xml
@@ -15,6 +15,7 @@
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_weight="1"
+            android:textColor="#FFFFFF"
             android:layout_height="wrap_content"
             android:textSize="25dp"
 
@@ -27,6 +28,7 @@
             <TextView
                 android:id="@+id/kcal"
                 android:layout_width="match_parent"
+                android:textColor="#FFFFFF"
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:textSize="30dp"
@@ -38,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="6"
                 android:textSize="30dp"
-
+                android:textColor="#FFFFFF"
                 android:text="kcal" />
         </LinearLayout>
 
