--- a/app/src/main/res/layout/app_barlist_food_private.xml
+++ b/app/src/main/res/layout/app_barlist_food_private.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="wrap_content"
-    android:id="@+id/app_bar"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/app_bar1"
     android:background="@drawable/app_bar_back"
     >
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -16,14 +18,18 @@
             android:layout_alignParentLeft="true" />
 
         <TextView
+            android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="เพิ่มรายการอาหาร"
-            android:textStyle="bold"
+            android:layout_marginTop="5dp"
+            android:text="รายการอาหารของฉัน"
+            android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="24dp"
-            android:layout_marginTop="3dp"
-            android:textAlignment="center" />
+            android:textStyle="bold"/>
+
+
+
 
     </RelativeLayout>
 
