--- a/app/src/main/res/layout/activity_list_saveedit_excercise_menu_private.xml
+++ b/app/src/main/res/layout/activity_list_saveedit_excercise_menu_private.xml
@@ -9,7 +9,7 @@
 
     <include
         android:id="@+id/searchView"
-        layout="@layout/add_excercise"
+        layout="@layout/app_editdataexcercise"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +67,7 @@
         android:layout_marginEnd="162dp"
         android:layout_marginBottom="364dp"
         android:background="@drawable/button_login_style"
-        android:text="ADDEXCERCISE"
+        android:text="เเก้ไข"
         android:textColor="#ffffff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
