--- a/app/src/main/res/layout/activity_list_saveedit_food_menu_private.xml
+++ b/app/src/main/res/layout/activity_list_saveedit_food_menu_private.xml
@@ -10,7 +10,7 @@
 
     <include
         android:id="@+id/searchView"
-        layout="@layout/app_editdatafood"
+        layout="@layout/app_editfood_private"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
