--- a/app/src/main/res/layout/app_editfood_private.xml
+++ b/app/src/main/res/layout/app_editfood_private.xml
@@ -17,25 +17,27 @@
             android:src="@drawable/ic_arrow_back_black_24dp"
             android:layout_alignParentLeft="true" />
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="เลือกรายการกิจกรรม"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textSize="24dp"
-            android:textStyle="bold"/>
-
         <ImageView
-            android:id="@+id/addprivate"
+            android:id="@+id/dalect"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:layout_marginRight="10dp"
-            android:src="@drawable/ic_stars_black_24dp" />
+            android:src="@drawable/ic_delete_black_24dp" />
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:text="เเก้ไขอาหารของฉัน"
+            android:textAlignment="center"
+            android:textColor="#FFFFFF"
+            android:textSize="24dp"
+            android:textStyle="bold"/>
+
+
 
 
     </RelativeLayout>
