--- a/app/src/main/res/layout/activity_list_edit_excercise.xml
+++ b/app/src/main/res/layout/activity_list_edit_excercise.xml
@@ -23,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="52dp"
         android:text="TextView"
+        android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="@+id/searchView"
         app:layout_constraintStart_toStartOf="@+id/recyclerView"
