--- a/app/src/main/res/layout/app_saveedit_excercise_private.xml
+++ b/app/src/main/res/layout/app_saveedit_excercise_private.xml
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
-            android:text="เเก้ไขรายการอาหาร"
+            android:text="เเก้ไขกิจกกรรมของฉัน"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
             android:textSize="24dp"
